--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Princial</title>
+    <title>Dragon World</title>
 </head>
 <body>
-    <h1>Olá MUndo</h1>
-    <hr>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias maxime ipsum quam ad quos placeat laudantium ipsa itaque voluptas odio, optio saepe dolorem. Porro aut quos nostrum, ratione quas maxime.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam fuga facilis quasi doloribus vel ipsam repellat quam? Ab non molestias fugiat enim optio doloremque consectetur voluptatem? Quae ea velit corporis.</p>
+    <main>
+        
+    </main>
 </body>
 </html>
